[package]
name = "macaroon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
secp256k1 = { version = "0.25.0", features = ["rand-std", "bitcoin-hashes-std"] }
thiserror = "1.0.40"
log = "0.4.17"
hmac = "0.12.1"
sha2 = "0.10.7"

[dev-dependencies]
pretty_assertions = "1.3.0"