[package]
name = "macaroon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
crypto_secretbox = "0.1.1"
thiserror = "1.0.40"
log = "0.4.17"
hmac = "0.12.1"
sha2 = "0.10.7"
hex = "0.4.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"

[dev-dependencies]
pretty_assertions = "1.3.0"